2008-09-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, src/interface.c, src/notebook.c:
   Remove can_focus flag from notebook widgets to avoid focused tab
   labels.
 * doc/geany.txt, doc/geany.html, src/editor.c, src/keybindings.c,
   src/keybindngs.h, src/plugindata.h:
   Make 'Previous/Next word part' keybindings configurable.


2008-09-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Return GEANY_AUTOINDENT_BASIC from editor_get_indent_prefs() if the
   per-document pref is set, even if the global mode is none.
 * scintilla/makefile.win32, scintilla/LexR.cxx,
   scintilla/KeyWords.cxx, scintilla/Makefile.am, src/templates.c,
   src/highlighting.c, src/plugindata.h, src/about.c,
   src/filetypes.c, src/filetypes.h, src/editor.c, THANKS,
   data/filetype_extensions.conf, data/filetypes.r:
   Apply patch from Andrew Rowland to add support for the R language
   (thanks, #2121502).
 * HACKING:
   Update to mention separate is_comment_style() and is_string_style()
   functions.
 * src/documentprivate.h, src/prefs.c, src/treeviews.c, src/notebook.c,
   src/document.c, src/document.h, src/editor.c, src/symbols.c,
   src/ui_utils.c:
   Use GeanyDocumentPrivate instead of using inheritance for non-public
   fields (this was unnecessary and meant using ugly casts).


2008-09-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, src/interface.c, src/vte.c:
   Set the page_size parameter of GtkAdjustments to 0 instead
   of 10 which is set by default by Glade. This prevents breakage of
   spin buttons with early versions of GTK 2.14.
 * src/callbacks.c, src/document.c, src/editor.c, src/editor.h,
   src/ui_utils.c, src/keybindings.c, src/prefs.c, src/search.c,
   src/tools.c:
   Unify the API in editor.c, all public functions now take a
   GeanyEditor* object.
 * src/editor.c:
   When using editor_get_eol_char_* functions with an invalid editor